--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">Debodeep Ghosal</a>
+                    <a href="#" class="nav__logo">Debodeep Ghosal DG</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -81,14 +81,14 @@
                         <h3 class="skills__subtitle">Development</h3>
                         <span class="skills__name">Html</span>
                         <span class="skills__name">Css</span>
-                        <span class="skills__name">Javascript</span>
+                        <span class="skills__name">GCP</span>
                         <span class="skills__name">AngularJS</span>
                         <span class="skills__name">React</span>
                         <span class="skills__name">Vue</span>
                         
                         <h3 class="skills__subtitle">OOPS</h3>
                         <span class="skills__name">C++</span>
-                        <span class="skills__name">Python</span>
+                        <span class="skills__name">C</span>
                         
                     </div>
 
